components/flashshell/tests/golden/diagnostics/grammar-chained-comparison.txt
error[FS1000]: comparison operators are non-associative
 --> grammar/invalid/chained-comparison.fsh:1:23
  |
1 | let ascending = 1 < 2 < 3
  |                       ^ comparison operators are non-associative
